--- a/awkawk/awkawk.vcproj
+++ b/awkawk/awkawk.vcproj
@@ -478,6 +478,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\text.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\util.cpp"
 				>
 			</File>
@@ -525,6 +529,10 @@
 			</File>
 			<File
 				RelativePath=".\strip.h"
+				>
+			</File>
+			<File
+				RelativePath=".\text.h"
 				>
 			</File>
 			<File
