--- a/awkawk/awkawk.vcproj
+++ b/awkawk/awkawk.vcproj
@@ -74,7 +74,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="strmbasd.lib d3d9.lib d3dx9.lib dxguid.lib winmm.lib comctl32.lib  uxtheme.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="C:\Program Files\Microsoft SDKs\Windows\v6.0\Samples\Multimedia\DirectShow\BaseClasses\Win32\Debug"
+				AdditionalLibraryDirectories=""
 				AdditionalManifestDependencies=""
 				GenerateDebugInformation="true"
 				TargetMachine="1"
@@ -158,7 +158,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="strmbasd.lib d3d9.lib d3dx9.lib dxguid.lib winmm.lib comctl32.lib uxtheme.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="C:\Program Files\Microsoft SDKs\Windows\v6.0\Samples\Multimedia\DirectShow\BaseClasses\x64\Debug"
+				AdditionalLibraryDirectories=""
 				AdditionalManifestDependencies=""
 				GenerateDebugInformation="true"
 				TargetMachine="17"
@@ -242,7 +242,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="strmbase.lib d3d9.lib d3dx9.lib dxguid.lib winmm.lib comctl32.lib uxtheme.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="C:\Program Files\Microsoft SDKs\Windows\v6.0\Samples\Multimedia\DirectShow\BaseClasses\Win32\Release"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -331,7 +331,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="strmbase.lib d3d9.lib d3dx9.lib dxguid.lib winmm.lib comctl32.lib uxtheme.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="C:\Program Files\Microsoft SDKs\Windows\v6.0\Samples\Multimedia\DirectShow\BaseClasses\x64\Release"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
