--- a/awkawk/awkawk.vcproj
+++ b/awkawk/awkawk.vcproj
@@ -421,6 +421,42 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\utility\locks.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|x64"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|x64"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
@@ -499,7 +535,27 @@
 				>
 			</File>
 			<File
+				RelativePath=".\utility\debug.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\utility\debugstream.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\utility\formattime.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\utility\iomanip.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\utility\iterator.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\utility\locks.hpp"
 				>
 			</File>
 			<File
@@ -527,7 +583,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\loki\ScopeGuardExt.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\utility\string.hpp"
 				>
 			</File>
 			<File
@@ -536,6 +600,10 @@
 			</File>
 			<File
 				RelativePath=".\text.h"
+				>
+			</File>
+			<File
+				RelativePath=".\utility\threads.hpp"
 				>
 			</File>
 			<File
