Mouse hiding in fullscreen mode

--- a/awkawk/awkawk.vcproj
+++ b/awkawk/awkawk.vcproj
@@ -52,6 +52,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_ATL_ATTRIBUTES"
 				StringPooling="true"
 				MinimalRebuild="true"
+				ExceptionHandling="2"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
@@ -137,6 +138,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_ATL_ATTRIBUTES"
 				StringPooling="true"
 				MinimalRebuild="true"
+				ExceptionHandling="2"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
@@ -223,6 +225,7 @@
 				AdditionalIncludeDirectories="C:\Program Files\Microsoft Platform SDK\Samples\Multimedia\DirectShow\VMR9\inc"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_ATL_ATTRIBUTES"
 				StringPooling="true"
+				ExceptionHandling="2"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
 				AssemblerOutput="2"
