Add missing file

--- a/awkawk/awkawk.vcproj
+++ b/awkawk/awkawk.vcproj
@@ -618,6 +618,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\version.h"
+				>
+			</File>
+			<File
 				RelativePath=".\window.h"
 				>
 			</File>
