--- a/awkawk/awkawk.vcproj
+++ b/awkawk/awkawk.vcproj
@@ -77,6 +77,7 @@
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=""
 				AdditionalManifestDependencies=""
+				DelayLoadDLLs="dbghelp.dll"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 				FixedBaseAddress="1"
@@ -163,6 +164,7 @@
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=""
 				AdditionalManifestDependencies=""
+				DelayLoadDLLs="dbghelp.dll"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
 				FixedBaseAddress="1"
@@ -248,6 +250,7 @@
 				AdditionalDependencies="strmiids.lib d3d9.lib d3dx9.lib dxguid.lib winmm.lib comctl32.lib uxtheme.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories=""
+				DelayLoadDLLs="dbghelp.dll"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -338,6 +341,7 @@
 				AdditionalDependencies="strmiids.lib d3d9.lib d3dx9.lib dxguid.lib winmm.lib comctl32.lib uxtheme.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories=""
+				DelayLoadDLLs="dbghelp.dll"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
