--- a/awkawk/awkawk.vcproj
+++ b/awkawk/awkawk.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="awkawk"
 	ProjectGUID="{B5F41F4A-1FBD-4818-A5B0-1FB4BF185773}"
 	RootNamespace="awkawk"
@@ -10,6 +10,7 @@
 	SccLocalPath="SAK"
 	SccProvider="SAK"
 	Keyword="AtlProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -24,8 +25,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="F:\Compiler Intermediates\$(PlatformName)\$(SolutionName)\$(ProjectName)\$(ConfigurationName)\"
+			OutputDirectory="$(SolutionDir)$(SolutionName)\$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="D:\Compiler Intermediates\$(SolutionName)\$(ProjectName)\$(PlatformName)\$(ConfigurationName)\"
 			ConfigurationType="1"
 			UseOfATL="2"
 			CharacterSet="1"
@@ -81,6 +82,8 @@
 				DelayLoadDLLs="dbghelp.dll"
 				GenerateDebugInformation="true"
 				LargeAddressAware="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -103,16 +106,13 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Debug|x64"
-			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="F:\Compiler Intermediates\$(PlatformName)\$(SolutionName)\$(ProjectName)\$(ConfigurationName)\"
+			OutputDirectory="$(SolutionDir)$(SolutionName)\$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="D:\Compiler Intermediates\$(SolutionName)\$(ProjectName)\$(PlatformName)\$(ConfigurationName)\"
 			ConfigurationType="1"
 			UseOfATL="2"
 			CharacterSet="1"
@@ -169,6 +169,8 @@
 				DelayLoadDLLs="dbghelp.dll"
 				GenerateDebugInformation="true"
 				LargeAddressAware="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -191,16 +193,13 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="F:\Compiler Intermediates\$(PlatformName)\$(SolutionName)\$(ProjectName)\$(ConfigurationName)\"
+			OutputDirectory="$(SolutionDir)$(SolutionName)\$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="D:\Compiler Intermediates\$(SolutionName)\$(ProjectName)\$(PlatformName)\$(ConfigurationName)\"
 			ConfigurationType="1"
 			UseOfATL="2"
 			CharacterSet="1"
@@ -258,6 +257,8 @@
 				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -280,16 +281,13 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|x64"
-			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="F:\Compiler Intermediates\$(PlatformName)\$(SolutionName)\$(ProjectName)\$(ConfigurationName)\"
+			OutputDirectory="$(SolutionDir)$(SolutionName)\$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="D:\Compiler Intermediates\$(SolutionName)\$(ProjectName)\$(PlatformName)\$(ConfigurationName)\"
 			ConfigurationType="1"
 			UseOfATL="2"
 			CharacterSet="1"
@@ -350,6 +348,8 @@
 				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -370,9 +370,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
